--- a/_config.yml
+++ b/_config.yml
@@ -23,7 +23,7 @@ description: >-
   Aunque el 43,89% de su población es indígena, el país no tiene una estrategia nacional de respuesta al VIH dirigida a los pueblos originarios y que considere la atención en idiomas maternos.
 
 # URL of your contracts file or API endpoint
-contracts_url: "https://landing.vivirconvih.org/assets/data/vih_guatemala.csv"
+contracts_url: "https://vivirconvih.org/assets/data/vih_guatemala.csv"
 #contracts_url: "https://api.beta.quienesquien.wiki/v2/contracts?sort=-compiledRelease.total_amount&compiledRelease.parties.memberOf.name=%2FGrupo%20Aeroportuario%2Fi&debug=true&limit=614"
 
 
@@ -32,7 +32,7 @@ bods_url: ""
 
 graph:
   # The name of your graphic
-  - title: "Graphic name"
+  - title: "Guatemala 2017-19"
   # los tamaños minimos y maximos de los nodos (en pixeles, aproximativo)
   - sizes:
     - min: 10
